--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "axum-serde"
-version = "0.1.0-alpha"
+version = "0.1.0-alpha.1"
 description = "Empower your Axum applications with multiple serde-based extractors and responders"
 authors = ["GengTeng <me@gteng.org>"]
 license = "MIT"
@@ -30,13 +30,17 @@ mime = "0.3.17"
 serde_yaml = { version = "0.9.27", optional = true }
 rmp-serde = { version = "1.1.2", optional = true }
 toml_ = { package = "toml", version = "0.8.8", optional = true }
+quick-xml = { version = "0.31.0", optional = true, features = ["serialize"] }
 axum-core = "0.4.0"
 async-trait = "0.1.74"
 thiserror = "1.0.50"
 bytes = "1.5.0"
 
+
 [features]
 yaml = ["dep:serde_yaml"]
 msgpack = ["dep:rmp-serde"]
 toml = ["dep:toml_"]
-full = ["yaml", "msgpack", "toml"]
+xml = ["dep:quick-xml"]
+xml_encoding = ["xml", "quick-xml/encoding"]
+full = ["yaml", "msgpack", "toml", "xml"]
