--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,10 @@ async-trait = "0.1.74"
 thiserror = "1.0.50"
 bytes = "1.5.0"
 
+[dev-dependencies]
+axum-test = "14.0.0"
+serde = { version = "1.0.193", features = ["derive"] }
+tokio = { version = "1.34.0", features = ["macros"] }
 
 [features]
 yaml = ["dep:serde_yaml"]
